# 2025_char_3d_struct_features

./: .gitignore  MANIFEST.in  README.md  environment.yml  library_build.py  motif_sequences.csv  pdb_features_SD.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: install_and_test.yml
dms_3d_features/: WC_bp_details_with_rmsd.py  cli.py  format_tables.py  hbond.py  library_build.py  logger.py  paths.py  pdb_features.py  plotting.py  process_motifs.py  sasa.py  stats.py  util.py
dms_quant_framework/: cli.py  library_build.py  paths.py  pdb_features.py  plotting.py  process_motifs.py  sasa.py  util.py
notebooks/: aa_pairs.ipynb  ac_pairs.ipynb  ag_pairs.ipynb  all_res.ipynb  all_res_w_bp.ipynb  cc_pairs.ipynb  cu_pairs.ipynb  distance_relationships.ipynb  figure_1.ipynb  general.ipynb  manuscript_outline.ipynb  pair_summary.ipynb  reactive_helices.ipynb  reactivity_comparison_whole pdb_library.ipynb  residue_trends.ipynb  revision_comment_analysis.ipynb  sasa.ipynb  stats.ipynb  wc_analysis.ipynb
notebooks/figures/: figure_1.ipynb  figure_2.ipynb  figure_3.ipynb  figure_4.ipynb  figure_5.ipynb  new_supplemental_figures.ipynb  supplemental_figures.ipynb
notebooks/old/: all_res.ipynb
scripts/: exclude.csv  get_new_atomic_distance.py  motif_hbonds.pkl  new_pdbs.json  non_wc_distances_avg_data.csv  non_wc_distances_reactivity_correlation.csv  non_wc_distances_reactivity_correlation.csv.bak  pdb_info.json  rev_motifs.pkl
test/: test_check_motif_df.py  test_hbond.py  test_pdb_features.py  test_plotting.py  test_process_motif.py  test_sasa.py
(+27 files in other folders)
