[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms_3d_features"
version = "1.0.0"
description = "code for the paper: a quantitative framework for structural interpretation of DMS reactivity"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joe Yesselman", email = "jyesselm@unl.edu" }]
keywords = ["dms_3d_features", "RNA", "DMS", "3D", "features"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "biopandas",
  "click",
  "editdistance",
  "freesasa",
  "matplotlib",
  "pandas",
  "regex",
  "seaborn",
  "scipy",
  "scikit-learn",
  "tabulate",
  "vienna",
  "rna_map @ git+https://github.com/YesselmanLab/rna_map@main",
  "rna_seq_tools @ git+https://github.com/jyesselm/seq_tools@main",
  "rna_secstruct @ git+https://github.com/jyesselm/rna_secstruct@main",
  "rna_secstruct_design @ git+https://github.com/YesselmanLab/rna_secstruct_design",
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "jupyter",
  "notebook",
  "ipykernel",
  "ipython",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dms_3d_features*"]


